-Fix body margin -Add styles

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,8 +1,23 @@
-<nav>
-  <ul>
-    <li><a class="active" href="#home">Noticias</a></li>
-    <li><a href="#news">Publicaciones</a></li>
-    <li><a href="#contact">Proyectos</a></li>
-    <li><a href="#about">Blog</a></li>
-  </ul>  
+<nav class="navbar">
+
+    <ul>
+
+        <li>
+            <a class="active" href="#home">Noticias</a>
+        </li>
+
+        <li>
+            <a href="#news">Publicaciones</a>
+        </li>
+
+        <li>
+            <a href="#contact">Proyectos</a>
+        </li>
+
+        <li>
+            <a href="#about">Blog</a>
+        </li>
+
+    </ul>
+
 </nav>
