--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,11 +1,11 @@
 .footer {
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: #111;
-   color: white;
-   text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #2a2a2a;
+    color: white;
+    text-align: center;
 }
 
 ul {
@@ -14,20 +14,17 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #111;
-  }
-  
-  li {
+}
+
+li {
     float: right;
-  }
-  
-  li a {
+}
+
+li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: #333;
-  }
+    font-size: 17px;
+}
