--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -1,23 +1,22 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: right;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
+.navbar {
+    width: 100%;
+    height: 71px;
+    background-color: #222222;
+    position: absolute;
+    font-family: helvetica;
+    ul {
+        list-style: none;
+        margin-top: 22px;
+    }
+    li {
+        float: right;
+        padding-right: 40px;
+    }
+    li a {
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        font-size: 21px;
+        color: #d8d8d8;
+    }
 }
