-Create blog view component -Add routes -Add styles

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         </li>
 
         <li>
-            <a href="#about">Blog</a>
+            <a [routerLink]=" ['blog','view'] ">Blog </a>
         </li>
 
     </ul>
