--- a/src/app/blog/view-blog/view-blog.component.scss
+++ b/src/app/blog/view-blog/view-blog.component.scss
@@ -1,6 +1,5 @@
 .main {
     position: absolute;
-    top: 71px;
     width: 100%;
 }
 
@@ -10,14 +9,14 @@
     text-align: center;
     color: #0f2998;
     font-size: 28px;
-    text-align: center;
-    margin-top: 63px;
+    margin-top: 40px;
 }
 
 .content {
     margin-top: 68px;
     width: 100%;
     display: flex;
+    margin-bottom: 60px;
 }
 
 .leftText {
