--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -1,12 +1,13 @@
 .navbar {
     width: 100%;
-    height: 71px;
+    height: 50px;
     background-color: #222222;
     font-family: helvetica;
-    position: absolute;
+    display: flex;
+    justify-content: flex-end;
     ul {
         list-style: none;
-        margin-top: 22px;
+        align-self: center;
     }
     li {
         float: right;
