🎨 Improved the styles of navbar and footer

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer>
   <div class="footer">
     <ul>
-      <li><a href="#home">Instagram</a></li>
-      <li><a href="#news">Contacto</a></li>
+      <li><a>Instagram</a></li>
+      <li><a>Contacto</a></li>
     </ul>
   </div>
 </footer>
