--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -1,12 +1,13 @@
+@import './../../../assets/sass/colors.scss';
+
+
 .navbar {
     width: 100%;
     height: 50px;
-    background-color: #222222;
-    font-family: helvetica;
     display: flex;
     justify-content: flex-end;
+    background-color:$black;
     ul {
-        list-style: none;
         align-self: center;
     }
     li {
@@ -14,10 +15,8 @@
         padding-right: 40px;
     }
     li a {
-        color: white;
         text-align: center;
-        text-decoration: none;
-        font-size: 21px;
-        color: #d8d8d8;
+        font-size: 18px;
+        color: $white;
     }
 }
