--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,13 @@
 
 * {
     margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
