implemented home desktop web view

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,83 @@
-<p>
-  home works!
-</p>
+<div class="hero-container">
+    <div class="title-container is-centered">
+      <p id="title" class="is-title is-yellow has-text-centered">
+        S.C.E.I.S
+      </p>
+
+      <p id="subtitle"class="is-small-standard-text has-text-centered">
+          Sociedad científfica de estudiantes de Ingeniería de sistemas
+      </p>
+    </div>
+
+    <div class="description-container is-centered">
+      <p class="is-standard-text is-white has-text-centered">
+        En este lugar encontrarás una pequeña descripción de lo que es 
+        S.C.E.I.S. En este lugar encontrarás una pequeña descripción de lo que es 
+        S.C.E.I.S. 
+      </p>
+    </div>
+
+    <div class="button-container is-centered">
+      <button class="is-principal-button">
+        ¿ QUIERES SER PARTE ?
+      </button>
+    </div>
+</div>
+
+
+<div class="body-container">
+  <div class="about-container">
+    <p id="about-title" class="is-title is-blue has-text-centered">
+      Acerca de nosotros
+    </p>
+
+    <p id="about-content" class="is-standard-text is-black has-text-centered">
+      En este lugar encontrarás información acerca de nosostros.
+      En este lugar encontrarás información acerca de nosostros.
+      En este lugar encontrarás información acerca de nosostros.
+    </p>
+
+    <p id="about-content" class="is-standard-text is-black has-text-centered">
+      En este lugar encontrarás información acerca de nosostros.
+      En este lugar encontrarás información acerca de nosostros.
+      En este lugar encontrarás información acerca de nosostros.
+    </p>
+
+    <p id="about-content" class="is-standard-text is-black has-text-centered">
+      En este lugar encontrarás información acerca de nosostros.
+      En este lugar encontrarás información acerca de nosostros.
+      En este lugar encontrarás información acerca de nosostros.
+    </p>
+
+  </div>
+
+  <div class="more-info-container">
+    <p id="more-info-title-1" class="is-title is-black has-text-centered">
+      Proyectos
+    </p>
+
+    <p id="more-info-content" class="is-standard-text is-gray has-text-centered">
+      Aca se muestran los proyectos de nuestros integrantes
+      Aca se muestran los proyectos de nuestros integrantes
+      Aca se muestran los proyectos de nuestros integrantes
+      Aca se muestran los proyectos de nuestros integrantes
+      Aca se muestran los proyectos de nuestros integrantes
+      Aca se muestran los proyectos de nuestros integrantes
+    </p>
+
+    <p id="more-info-title-2" class="is-title is-black has-text-centered">
+      Cursos
+    </p>
+  
+    <p id="more-info-content" class="is-standard-text is-gray has-text-centered">
+      Aca se encuentran los cursos relacionados a la sociedad
+      Aca se encuentran los cursos relacionados a la sociedad
+      Aca se encuentran los cursos relacionados a la sociedad
+      Aca se encuentran los cursos relacionados a la sociedad
+      Aca se encuentran los cursos relacionados a la sociedad
+      Aca se encuentran los cursos relacionados a la sociedad
+      Aca se encuentran los cursos relacionados a la sociedad
+    </p>
+  </div>
+
+</div>
