--- a/src/assets/sass/colors.scss
+++ b/src/assets/sass/colors.scss
@@ -1,2 +1,22 @@
 $black: #222222;
+$gray: #2a2a2a;
 $white: #d8d8d8;
+$yellow: #fbcc33;
+$blue: #224afb;
+
+
+.is-yellow {
+    color: $yellow;
+}
+
+.is-white {
+    color: $white;
+}
+
+.is-black {
+    color: $black;
+}
+
+.is-blue {
+    color: $blue;
+}
