--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         </li>
 
         <li>
-            <a [routerLink]=" ['blog','view'] ">Blog </a>
+            <a [routerLink]=" ['blog','list'] ">Blogs </a>
         </li>
 
     </ul>
