-Fix observation names

--- a/src/app/blog/view-blog/view-blog.component.html
+++ b/src/app/blog/view-blog/view-blog.component.html
@@ -1,7 +1,7 @@
 <div class='main'>
     <h3 class='title'>Como iniciar cursos de programacion</h3>
     <div class='content'>
-        <div class="leftText">
+        <div class="left-text">
             <p class='text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <br>
             <p class='text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -11,7 +11,7 @@
             <p class='text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <br>
         </div>
-        <div class='rightImage'>
+        <div class='right-image'>
             <div>
                 <img class='image' src="https://st.depositphotos.com/1158045/4197/i/950/depositphotos_41979079-stock-photo-people-studying-in-a-library.jpg" alt="" srcset="">
                 <label class='date'>14/03/19</label>
