--- a/src/app/blog/view-blog/view-blog.component.scss
+++ b/src/app/blog/view-blog/view-blog.component.scss
@@ -19,12 +19,12 @@
     margin-bottom: 60px;
 }
 
-.leftText {
+.left-text {
     width: 50%;
     text-align: justify;
 }
 
-.rightImage {
+.right-image {
     display: inline-block;
     position: relative;
     width: 50%;
