--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -14,6 +14,7 @@
         align-self: center;
         display: flex;
         flex-direction: column;
+        padding-top: 10px;
         @media (max-width: 767px) {
             width: 90%;
         }
