Add button to edit info

--- a/src/app/blog/view-blog/view-blog.component.html
+++ b/src/app/blog/view-blog/view-blog.component.html
@@ -11,4 +11,7 @@
             </div>
         </div>
     </div>
+    <div *ngIf="isAdmin" class="button-section">
+        <button (click)="editBlog()" class="button">Editar</button>
+    </div>
 </div>
