--- a/src/app/blog/view-blog/view-blog.component.scss
+++ b/src/app/blog/view-blog/view-blog.component.scss
@@ -1,6 +1,7 @@
 .main {
     position: absolute;
     width: 100%;
+    height: 100%;
 }
 
 .title {
@@ -45,4 +46,20 @@
     position: absolute;
     bottom: 1%;
     right: 25%;
+}
+
+.button-section {
+    position: fixed;
+    margin: 0px 50px;
+    right: 0;
+}
+
+.button {
+    width: 150px;
+    height: 57px;
+    border-radius: 8px;
+    font-size: 18px;
+    color: #d8d8d8;
+    background-color: #224afb;
+    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.23);
 }
