Fixed image in view blog

--- a/src/app/blog/blog-list/blog-list.component.html
+++ b/src/app/blog/blog-list/blog-list.component.html
@@ -14,4 +14,7 @@
             </div>
         </div>
     </div>
+    <div *ngIf="isAdmin" class="button-section">
+        <button (click)="createBlog()" class="button">Crear Blog</button>
+    </div>
 </div>
