--- a/src/app/blog/view-blog/view-blog.component.html
+++ b/src/app/blog/view-blog/view-blog.component.html
@@ -5,9 +5,10 @@
             <div [innerHTML]="blog.text" class="text"></div>
         </div>
         <div class='right-image'>
-            <div>
-                <img class='image' src="{{ blog.imageUrl }}">
-                <label class='date'>{{ blog.date | date: 'dd/MM/yyyy' }}</label>
+            <div class='image' [ngStyle]="{'background-image': 'url(' + blog.imageUrl + ')'}">
+                <div class="image-info">
+                    <label class='date'>{{ blog.date | date: 'dd/MM/yyyy' }}</label>
+                </div>
             </div>
         </div>
     </div>
