--- a/src/app/blog/blog-list/blog-list.component.scss
+++ b/src/app/blog/blog-list/blog-list.component.scss
@@ -1,5 +1,5 @@
 .main {
-    height: 93vh;
+    height: 110vh;
     display: flex;
     justify-content: center;
     .list-container {
@@ -59,6 +59,21 @@
      ::-webkit-scrollbar {
         width: 0px;
         background: transparent;
+    }
+    .button-section {
+        position: fixed;
+        margin: 0px 50px;
+        right: 0;
+        bottom: 70px;
+    }
+    .button {
+        width: 150px;
+        height: 57px;
+        border-radius: 8px;
+        font-size: 18px;
+        color: #d8d8d8;
+        background-color: #224afb;
+        box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.23);
     }
 }
 
