--- a/src/app/blog/edit-blog/edit-blog.component.html
+++ b/src/app/blog/edit-blog/edit-blog.component.html
@@ -1,1 +1,1 @@
-<app-blog-form [idBlog]="idBlog" (submit)="editBlog($event)"></app-blog-form>
+<app-blog-form [idBlog]="idBlog" (submitBlog)="editBlog($event)"></app-blog-form>
